Disabling passive touchmove event to prevent viewport panning on ios

--- a/style/main.css
+++ b/style/main.css
@@ -16,4 +16,5 @@ body {
     border-radius: 1000px;
     width: 100%;
     height: 100%;
+    user-select: none;
 }
